prover-ray/zkcdriver/testdata/synced/invalid/if_03.zkc
//error:4:16-17:unexpected token
fn f(x:u8) -> (r:u8) {
  r = 0
  if x == (x + ) {
    r = 1
    return
  }
  return
}
